Change heading from 'Special Message' to 'Message'

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ body{
 
 <!-- FIRST PAGE -->
 <div class="container" id="firstPage">
-    <h1>✨ Special Message ✨</h1>
+    <h1>✨ Message ✨</h1>
     <p>
         তুমি যদি নিজেকে দেখতে চাও<br>
         তাহলে <b>YES</b> এ ক্লিক করো 💙
